...

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasks_fragment_dest">

    <fragment
        android:id="@+id/task_detail_fragment_dest"
        android:name="com.example.android.architecture.blueprints.todoapp.taskdetail.TaskDetailFragment"
        android:label="Task Details">
        <action
...
            app:argType="string" />
        <action
            android:id="@+id/action_taskDetailFragment_to_tasksFragment"
            app:destination="@id/tasks_fragment_dest" />
    </fragment>
    <fragment
        android:id="@+id/statistics_fragment_dest"
        android:name="com.example.android.architecture.blueprints.todoapp.statistics.StatisticsFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_statisticsFragment_to_tasksFragment"
            app:destination="@id/tasks_fragment_dest"
            />
...
